<resources>
    <string name="app_name">SCI-TU Report</string>
    <string name="facebook_app_id">2294941497408548</string>
    <string name="fb_login_protocol_scheme">fb2294941497408548</string>
    <string name="report">รายงาน</string>
    <string name="detect_location">ค้นหาตำแหน่ง</string>
    <string name="need_gps_enable">Need to enable GPS</string>
    <string name="cancel">cancel</string>
    <string name="report_picture">Report Picture</string>
    <string name="user_picture_thumnail">User Picture Thumnail</string>
    <string name="com_facebook_loginview_logged_in_using_facebook_f1gender">fb</string>
    <string name="menu_icon">Menu Icon</string>
    <string name="loading">Loading . . .</string>
    <string name="close_image_button_description">Close Image Button Description</string>
    <string name="subscribe_th">ติดตาม</string>
    <string name="rating_th">ให้คะแนน</string>
    <string name="unsubscribe_th">เลิกติดตาม</string>
    <string name="comment_th">แสดงความคิดเห็น</string>
    <string name="logout_icon_description">Logout Icon</string>
    <string name="setting_icon_description">setting icon</string>
    <string name="profile_icon_description">profile icon</string>
    <string name="all_report_icon_description">all report icon</string>
    <string name="report_status_icon_description">report status icon</string>
    <string name="check_status_th">ตรวจสอบสถานะ</string>
    <string name="view_profile_th">ดูโปรไฟล์ของฉัน</string>
    <string name="all_report_th">คำร้องเรียนทั้งหมด</string>
    <string name="setting_th">ตั้งค่า</string>
    <string name="logout_th">ออกจากระบบ</string>
    <string name="waiting_status_th">เริ่มต้น</string>
    <string name="accepted_status_th">รับเรื่องแล้ว</string>
    <string name="inprogress_status_th">กำลังดำเนินการ</string>
    <string name="finished_status_th">เสร็จสิ้น</string>
    <string name="email">Email</string>
    <string name="password">Password</string>
    <string name="sign_up">Sign Up</string>
    <string name="first_name">First name</string>
    <string name="last_name">Last name</string>
    <string name="confirm_password_th">ยืนยันรหัสผ่าน</string>
    <string name="password_th">รหัสผ่าน</string>
    <string name="email_th">อีเมล</string>
    <string name="male_th">ชาย</string>
    <string name="female_th">หญิง</string>
    <string name="gender_th">เพศ</string>
    <string name="name_th">ชื่อ</string>
    <string name="lastname_th">นามสกุล</string>
    <string name="register_th">สมัครสมาชิก</string>
    <string name="birthdate_th">วันเกิด</string>
    <string name="date_finish_th">วันที่คาดว่าจะเสร็จสิ้น</string>
    <string name="duplicate_email_th">มีผู้ใช้อีเมลนี้ในระบบแล้ว</string>
    <string name="home_icon">Home Icon</string>
    <string name="delete_image">delete image</string>
    <string name="user_image">User Image</string>
    <string name="facebook">facebook</string>
    <string name="login_th">เข้าสู่ระบบ</string>
    <string name="not_member_th">ไม่ได้เป็นสมาชิก?</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="search_th">ค้นหา</string>
    <string name="filter_th">ตัวกรอง</string>
    <string name="addPicture_th">เพิ่มรูปภาพ</string>
    <string name="addPic_report_th">เพิ่มรูปภาพของปัญหา</string>
    <string name="select_type_propblem_th">เลือกประเภทของปัญหา</string>
    <string name="select_problem_type">Select problem type</string>
    <string name="position_icon">Position icon</string>
    <string name="problem_place_th">สถานที่ของปัญหา</string>
    <string name="door_icon">Door icon</string>
    <string name="select_room_th">เลือกห้อง</string>
    <string name="select_problem_th">เลือกประเภท</string>
    <string name="detail_th">รายละเอียด</string>
    <string name="change_th"><u>เปลี่ยน</u></string>
    <string name="find_again_th"><u>ค้นหาใหม่</u></string>
    <string name="conditioner_problem_th">ระบบเครื่องปรับอากาศ</string>
    <string name="water_problem_th">ระบบประปา</string>
    <string name="electric_problem_th">ระบบไฟฟ้า</string>
    <string name="damaged_material_problem_th">วัสดุภายในห้อง</string>
    <string name="technology_problem_th">สื่อการเรียนการสอน</string>
    <string name="internet_problem_th">ไอทีและอินเทอร์เน็ต</string>
    <string name="clean_and_security_problem_th">ความสะอาด\nและความปลอดภัย</string>
    <string name="others_problem_th">อื่นๆ</string>
    <string name="sound_problem_th">ปัญหาเสียง</string>
    <string name="select_problem_type_th">เลือกประเภทปัญหา</string>
    <string name="select_user_type_th">เลือกประเภทผู้ใช้</string>
    <string name="animal_problem_th">ปัญหาสัตว์</string>
    <string name="report_picture_icon">Report picture icon</string>
    <string name="room_th">ห้อง</string>
    <string name="report_problem_th">แจ้งปัญหา</string>
    <string name="type_detail_th">พิมพ์รายละเอียด...</string>
    <string name="report_setting_button">Report Setting Button</string>
    <string name="manage_status_th">จัดการสถานะ</string>
    <string name="see_detail_th">ดูรายละเอียด</string>
    <string name="ok">OK</string>
    <string name="contact_housekeeper_th">ติดต่อผู้ดูแลห้องเรียน</string>
    <string name="report_problem2_th">แจ้งปัญหาที่พบ</string>
    <string name="check_list_th">รายการที่ต้องทำ</string>
    <string name="type_message_th">พิมพ์ข้อความ</string>
    <string name="notification_th">การแจ้งเตือน</string>
    <string name="notification_icon">Notification icon</string>
    <string name="all_menu_th">เมนูทั้งหมด</string>
    <string name="loading_th">กำลังโหลด...</string>
    <string name="add_list_th">เพิ่มรายการ</string>
    <string name="reset_th">รีเซ็ต</string>
    <string name="cancel_th">ยกเลิก</string>
    <string name="add_th">เพิ่ม</string>
    <string name="room_caretaker_th">ผู้ดูแลห้องเรียน</string>
    <string name="all_problem_in_faculty">ปัญหารอดำเนินการ</string>
    <string name="finish_problem_in_faculty">ปัญหาที่แก้ไขเสร็จสิ้น</string>
    <string name="all_problem_duplicate_in_faculty">ปัญหาที่มีคนแจ้งเข้ามาแล้ว</string>
    <string name="officer_th">เจ้าหน้าที่</string>
    <string name="normal_user_th">ผู้ใช้ทั่วไป</string>
    <string name="room2_th">ชื่อห้องหรือชื่อสถานที่ :</string>
    <string name="report_success_th">แจ้งปัญหาเสร็จสิ้น</string>
    <string name="userType_th">บทบาทผู้ใช้</string>
    <string name="role_th">ประเภทผู้ใช้</string>
    <string name="change_status_th">เปลี่ยนสถานะ</string>
    <string name="building_th">ตึกเรียน</string>
    <string name="search_housekeeper_th">ค้นหาผู้ดูแลห้องเรียน</string>
    <string name="call_th">โทร</string>
    <string name="message_th">ข้อความ</string>
    <string name="arrow_back">Arrow back</string>
    <string name="checklist_name_th">ชื่อรายการ</string>
    <string name="save_th">บันทึก</string>
    <string name="main_checklist">รายการหลัก</string>
    <string name="edit_checklist_th">แก้ไขรายการ</string>
    <string name="edit_role_th">แก้ไขบทบาทผู้ใช้</string>
    <string name="edit_takecare_type_th">แก้ไขงานที่รับผิดชอบ</string>
    <string name="statistic">สรุปผล</string>
    <string name="staff_work_th">งานที่ต้องทำ</string>
    <string name="add_work">ดึงงาน</string>

    <string name="continue_th">ดำเนินการต่อ</string>
    <string name="building_and_environment_problem_th">อาคาร\nและสิ่งแวดล้อม</string>

    <string name="telephone_problem_th">ระบบโทรศัพท์</string>
<!--    <string name="internet_wiring_problem_th">งานเดินสายระบบอินเทอร์เน็ต</string>-->
    <string name="menu_th">เมนู</string>
    <string name="add_takecare_room_th">เพิ่มห้องที่ดูแล</string>
    <string name="status_progress_th">สถานะการดำเนินงานของปัญหา</string>
    <string name="comment2_th">ความคิดเห็น</string>
    <string name="acra_toast_text">sorry, the appication crashed. A report will be send to developers.</string>

    <string name="student_th">นักศึกษา</string>
    <string name="tustaff_th">บุคลากร</string>
    <string name="others_th">อื่นๆ</string>
    <string name="resetpass">ลืมรหัสผ่าน</string>

    <string name="problem1">ระบบไฟฟ้า</string>
    <string name="problem2">ระบบประปา</string>
    <string name="problem3">ระบบเครื่องปรับอากาศ</string>
    <string name="problem4">วัสดุภายในห้อง</string>
    <string name="problem5">สื่อการเรียนการสอน</string>
    <string name="problem6">ไอทีและอินเตอร์เน็ต</string>
    <string name="problem7">อาคารและสิ่งแวดล้อม</string>
    <string name="problem8">ความสะอาดและความปลอดภัย</string>
    <string name="problem9">ระบบโทรศัพท์</string>
    <string name="problem10">อื่นๆ</string>

    <string name="manage_works_th">มอบหมายงาน</string>
    <string name="select_staff">เลือกผู้รับผิดชอบ</string>

    <string name="report_problem_type">ประเภทปัญหา</string>
    <string name="report_placecode" >สถานที่</string>
    <string name="report_rooms">ตำแหน่ง</string>
    <string name="report_detail">รายละเอียด</string>
    <string name="report_takecareBy">ผู้รับผิดชอบเดิม</string>
    <string name="search_email">ค้นหา</string>

    <string name="note">หมายเหตุ</string>



    <string name="all_stat">ทั้งหมด</string>
    <string name="stat1">ฝ่ายอาคารและสถานที่</string>
    <string name="stat2">ฝ่ายสารสนเทศ</string>
    <string name="stat3">ฝ่ายซ่อมบำรุง</string>



    <string name="all_problem">ปัญหาทั้งหมด</string>
    <string name="finish_problem">แก้ไขสำเร็จ</string>
    <string name="unfinish_problem">ตกค้าง</string>
    <string name="percent_problem">คิดเป็น</string>


</resources>
