<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:padding="14dp"
    android:orientation="vertical"
    >
    <android.support.v7.widget.AppCompatTextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/add_list_th"
        android:textSize="18sp"
        android:textStyle="bold"
        />
    <android.support.v7.widget.AppCompatEditText
        android:id="@+id/editText"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/checklist_name_th"
        />
    <android.support.v7.widget.AppCompatTextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="ประเภทของรายการ"
        />
    <android.support.v7.widget.AppCompatSpinner
        android:id="@+id/spinner"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"

        />


    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"
        android:gravity="center">
        <android.support.v7.widget.AppCompatButton
            android:id="@+id/addList_button"
            android:layout_width="140dp"
            android:layout_height="wrap_content"
            android:text="@string/add_th"
            android:fontFamily="@font/my_font"
            android:textSize="20sp"
            android:textColor="@color/white"
            android:background="@drawable/red_round_button"
            />
        <android.support.v7.widget.AppCompatButton
            android:id="@+id/cancel_button"
            android:layout_width="140dp"
            android:layout_height="wrap_content"
            android:layout_marginLeft="10dp"

            android:text="@string/cancel_th"
            android:fontFamily="@font/my_font"
            android:textSize="20sp"
            android:textColor="@color/white"
            android:background="@drawable/red_round_button"
            />
    </LinearLayout>

</LinearLayout>