<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".SettingActivity">
    <com.coldzify.finalproject.TitleBarView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:title_name="@string/setting_th"
        app:icon_pic="@drawable/ic_menugrid"
        />
    <android.support.v7.widget.AppCompatTextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:padding="10dp"
        android:text="@string/notification_th"
        app:fontFamily="@font/my_font"
        android:textSize="20sp"
        android:textColor="@color/color_titleBar_bg"
        />

    <View
        android:id="@+id/divider2"
        android:layout_width="match_parent"
        android:layout_height="2dp"
        android:background="@color/placeholder_background" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"

        android:padding="10dp"
        >
        <android.support.v7.widget.AppCompatTextView
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/status_progress_th"

            app:fontFamily="@font/my_font"
            android:textSize="18sp"
            android:textColor="@color/color_black"
            />

        <Switch
            android:id="@+id/switch1"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginRight="12dp"
            />
    </LinearLayout>
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"

        android:padding="10dp"
        >
        <android.support.v7.widget.AppCompatTextView
            android:layout_width="0dp"
            android:layout_height="wrap_content"

            android:layout_weight="1"
            android:text="@string/comment2_th"
            app:fontFamily="@font/my_font"
            android:textSize="18sp"
            android:textColor="@color/color_black"
            />

        <Switch
            android:id="@+id/switch2"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginRight="12dp"
            />
    </LinearLayout>
</LinearLayout>