<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".StatisticActivity">

    <com.coldzify.finalproject.TitleBarView
        android:layout_width="match_parent"
        android:layout_height="61dp"
        app:icon_pic="@drawable/ic_menugrid"
        app:title_name="@string/statistic"
        app:fontFamily="@font/my_font">

    </com.coldzify.finalproject.TitleBarView>

    <Spinner
        android:id="@+id/filter_feed"
        android:layout_width="match_parent"
        android:layout_height="49dp"
        app:fontFamily="@font/my_font"/>


    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@drawable/borderlayout"
        android:orientation="vertical">

        <RadioGroup
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="20dp"
            android:orientation="vertical"
            app:fontFamily="@font/my_font">

            <RadioButton
                android:id="@+id/radioButton7"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:maxWidth="200dp"
                android:text="@string/all_stat"
                android:textColor="#3C3A3A"
                android:textSize="20sp"
                app:fontFamily="@font/my_font" />

            <RadioButton
                android:id="@+id/radioButton4"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/stat1"
                android:textColor="#3C3A3A"
                android:textSize="20sp"
                app:fontFamily="@font/my_font" />

            <RadioButton
                android:id="@+id/radioButton8"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="@string/stat2"
                android:textColor="#3C3A3A"
                android:textSize="20sp"
                app:fontFamily="@font/my_font" />

            <RadioButton
                android:id="@+id/radioButton9"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="@string/stat3"
                android:textColor="#3C3A3A"
                android:textSize="20sp"
                app:fontFamily="@font/my_font" />

        </RadioGroup>
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="30dp">

        <android.support.v7.widget.AppCompatTextView
            android:id="@+id/all_problem"
            android:layout_width="130dp"
            android:layout_height="wrap_content"
            android:layout_marginLeft="30dp"
            android:gravity="left"
            android:minWidth="70dp"
            android:text="@string/all_problem"
            android:textSize="19sp"
            android:textStyle="bold"
            app:fontFamily="@font/my_font" />

        <android.support.v7.widget.AppCompatTextView
            android:id="@+id/all_problem_ans"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="15dp"
            android:layout_weight="1"
            android:minWidth="70dp"
            android:textSize="20sp"
            app:fontFamily="@font/my_font" />

    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="15dp">

        <android.support.v7.widget.AppCompatTextView
            android:id="@+id/finish_problem"
            android:layout_width="130dp"
            android:layout_height="wrap_content"
            android:layout_marginLeft="30dp"
            android:gravity="left"
            android:minWidth="70dp"
            android:text="@string/finish_problem"
            android:textSize="19sp"
            android:textStyle="bold"
            app:fontFamily="@font/my_font" />

        <android.support.v7.widget.AppCompatTextView
            android:id="@+id/finish_problem_ans"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="15dp"
            android:layout_weight="1"
            android:minWidth="70dp"
            android:textSize="20sp"
            app:fontFamily="@font/my_font" />

    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="15dp">

        <android.support.v7.widget.AppCompatTextView
            android:id="@+id/unfinish_problem"
            android:layout_width="130dp"
            android:layout_height="wrap_content"
            android:layout_marginLeft="30dp"
            android:gravity="left"
            android:minWidth="70dp"
            android:text="@string/unfinish_problem"
            android:textSize="19sp"
            android:textStyle="bold"
            app:fontFamily="@font/my_font" />

        <android.support.v7.widget.AppCompatTextView
            android:id="@+id/unfinish_problem_ans"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="15dp"
            android:layout_weight="1"
            android:minWidth="70dp"
            android:textSize="20sp"
            app:fontFamily="@font/my_font" />

    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="15dp">

        <android.support.v7.widget.AppCompatTextView
            android:id="@+id/percent_problem"
            android:layout_width="130dp"
            android:layout_height="wrap_content"
            android:layout_marginLeft="30dp"
            android:gravity="left"
            android:minWidth="70dp"
            android:text="@string/percent_problem"
            android:textSize="19sp"
            android:textStyle="bold"
            app:fontFamily="@font/my_font" />

        <android.support.v7.widget.AppCompatTextView
            android:id="@+id/percent_problem_ans"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="15dp"
            android:layout_weight="1"
            android:minWidth="70dp"
            android:textSize="20sp"
            app:fontFamily="@font/my_font" />

    </LinearLayout>

    <android.support.v4.widget.SwipeRefreshLayout
        android:id="@+id/swiperefresh"
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <android.support.v7.widget.RecyclerView
            android:id="@+id/recyclerView"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"/>

    </android.support.v4.widget.SwipeRefreshLayout>


</LinearLayout>